wither_derive/tests/fail/field-id-incorrect-serde-skip-value.stderr
error: the serde `skip_serializing_if` attr for wither::Model ID fields should be `skip_serializing_if="Option::is_none"`
 --> $DIR/field-id-incorrect-serde-skip-value.rs:7:27
  |
7 |     #[serde(rename="_id", skip_serializing_if="Option::is_some")]
  |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
